almost finish "about" page for iphone

--- a/app/_jade/index.jade
+++ b/app/_jade/index.jade
@@ -1,10 +1,8 @@
-
 <!DOCTYPE html>
 html(lang="ru")
 	include templates/head
 	body 
 		include templates/header
-		include templates/main
-		include templates/sidebar
+		include templates/about__content
 		include templates/footer
 		include templates/scripts_include
