--- a/app/_jade/templates/head.jade
+++ b/app/_jade/templates/head.jade
@@ -3,4 +3,5 @@ head
 	meta(http-equiv='X-UA-Compatible', content="IE=edge")
 	meta(name='viewport' content='width=device-width')
 	title Михаил Измайлов 
-	link(rel='stylesheet' href="_css/main.css")
+	link(rel='stylesheet' href="css/main.css")
+	link(href="https://fonts.googleapis.com/css?family=Roboto:300,400,400i,700&subset=cyrillic" rel="stylesheet")
