--- a/app/_sass/common/_misc.scss
+++ b/app/_sass/common/_misc.scss
@@ -1,36 +1,7 @@
 body{
-	background: #f4f4f4; 
+	font-size: 16px;
+	font-family: "Roboto", sans-serif;
 }
-.wrap{
-	font-family: $reg;
-	margin: auto;
-	min-width: 1100px;
-}
-.container{
-	max-width: 1100px;
-	margin: auto;
-	@extend %clear;
-}
-.socials__item{
-	border-radius: 50%;
-	float: left;
-	overflow: hidden;
-}
-.socials__item:first-child{
-	margin-left: 0px;
-}
-.main__title{
-	font-size: 20px;
-	font-family: $sb;
-	margin-bottom: 0px;
-}
-.column{
-	text-align: justify;
-	width: 530px !important;
-	&.first{
-		float: left !important;
-	}
-	&.last{
-		float: right !important;
-	}
+*{
+	box-sizing: border-box;
 }
