--- a/app/_sass/main.scss
+++ b/app/_sass/main.scss
@@ -1,11 +1,11 @@
-$orange: #ff6600;
-$gray: #dee1e4;
-
 @import	"common/mixins";
-
+@import	"common/spriteSvg";
 @import	"common/normalize";
-
 @import	"common/misc";
 
+// sections
 @import "sections/header";
 @import "sections/footer";
+
+//pages
+@import "sections/about__content";
