--- a/app/_sass/common/_spriteSvg.scss
+++ b/app/_sass/common/_spriteSvg.scss
@@ -13,6 +13,10 @@
 	font-size:(1009.986/10)*1rem;
 	width:(900.331/1009.986)*1em;
 }
+.icon-about_header {
+	font-size:(175.44/10)*1rem;
+	width:(498.161/175.44)*1em;
+}
 .icon-arrow_down {
 	font-size:(16.164/10)*1rem;
 	width:(25.18/16.164)*1em;
@@ -64,10 +68,6 @@
 .icon-login {
 	font-size:(15.422/10)*1rem;
 	width:(14.137/15.422)*1em;
-}
-.icon-map_marker {
-	font-size:(21.654/10)*1rem;
-	width:(15.151/21.654)*1em;
 }
 .icon-map_n {
 	font-size:(45/10)*1rem;
