--- a/app/_sass/main.scss
+++ b/app/_sass/main.scss
@@ -6,6 +6,8 @@
 // sections
 @import "sections/header";
 @import "sections/footer";
+@import "sections/navigation";
+@import "sections/socials";
 
 //pages
 @import "sections/about__content";
