--- a/app/_jade/common/mixins.jade
+++ b/app/_jade/common/mixins.jade
@@ -2,3 +2,20 @@ mixin icon(name,mod)
 	- mod = mod? " icon_" + mod : ''
 	svg(class="icon icon-" + name + mod)
 		use(xlink:href="pictures/sprite.svg#" + name)
+
+mixin nav(mod)
+	nav(class=mod).nav
+		ul.nav__list
+			-var items = {'Обо мне':'about.html','Мои работы':'works.html'};
+			each val,key in items
+				li.nav__item
+					a(href=val).nav__link= key
+
+mixin socials(mod)
+	div(class=mod).socials
+		-var items = {'vk':'https://new.vk.com/id151078387','github':'https://github.com/Muxacuk','in':'https://www.linkedin.com/in/%D0%BC%D0%B8%D1%85%D0%B0%D0%B8%D0%BB-%D0%B8%D0%B7%D0%BC%D0%B0%D0%B9%D0%BB%D0%BE%D0%B2-a5ba64119?trk=nav_responsive_tab_profile_pic'};
+		ul.socials__list
+			each val,index in items
+				li.socials__item
+					a(href="#{val}" target="_blank").socials__link
+						+icon(index,"")
