--- a/app/_jade/templates/scripts_include.jade
+++ b/app/_jade/templates/scripts_include.jade
@@ -1,3 +1,3 @@
-
+script(src="js/foundation.js")
+script(async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDAdHz2oxEuk2KacNBIViBar64cy1fuQuw&callback=initMap")
 script(src="js/main.js")
-	
