--- a/app/css/main.css
+++ b/app/css/main.css
@@ -12,6 +12,10 @@
   font-size: 100.9986rem;
   width: 0.89143em; }
 
+.icon-about_header {
+  font-size: 17.544rem;
+  width: 2.83949em; }
+
 .icon-arrow_down {
   font-size: 1.6164rem;
   width: 1.55778em; }
@@ -63,10 +67,6 @@
 .icon-login {
   font-size: 1.5422rem;
   width: 0.91668em; }
-
-.icon-map_marker {
-  font-size: 2.1654rem;
-  width: 0.69969em; }
 
 .icon-map_n {
   font-size: 4.5rem;
@@ -487,13 +487,19 @@ body {
   box-sizing: border-box; }
 
 .header {
-  background-image: url("../pictures/header_bg.jpg");
-  background-size: cover;
-  background-position: center;
   height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center; }
+  .header__fixed {
+    position: fixed;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
+    background-image: url("../pictures/header_bg.jpg");
+    background-size: cover;
+    background-position: center; }
   .header__top {
     padding: 10px;
     display: flex;
@@ -503,6 +509,7 @@ body {
   .header__center {
     color: white;
     position: relative;
+    top: -50px;
     width: 90%;
     margin: auto;
     text-align: center; }
@@ -534,11 +541,113 @@ body {
   .header__subtext {
     font-size: .875em; }
   .header__bottom {
-    margin: 15px auto 50px;
-    position: relative;
-    z-index: 1; }
+    margin: 15px auto 15px;
+    bottom: 0;
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    z-index: 5; }
   .header__scroll-button {
     color: rgba(255, 255, 255, 0.5); }
+  .header__hidden {
+    position: fixed;
+    top: 0;
+    right: -100%;
+    width: 100%;
+    min-height: 100vh;
+    display: flex;
+    z-index: 5;
+    background-color: blue;
+    transition: 1s; }
+  .header__hidden_active {
+    right: 0px; }
+
+.nav-trigger {
+  position: fixed;
+  z-index: 100;
+  right: 10px;
+  top: 10px;
+  transform-origin: 50%; }
+  .nav-trigger:hover .nav-trigger__icon {
+    background-color: yellow; }
+  .nav-trigger__icon {
+    transition: 1s;
+    display: block;
+    width: 26px;
+    height: 3px;
+    border-radius: 3px;
+    background-color: #fff; }
+    .nav-trigger__icon:not(:first-child) {
+      margin-top: 7px; }
+
+.nav-trigger_active .nav-trigger__icon:nth-child(1) {
+  transform: rotateZ(45deg) translateY(10px) translateX(5px); }
+
+.nav-trigger_active .nav-trigger__icon:nth-child(3) {
+  transform: rotateZ(-45deg) translateY(-10px) translateX(4px); }
+
+.nav-trigger_active .nav-trigger__icon:nth-child(2) {
+  opacity: 0; }
+
+.nav-trigger_active:hover .nav-trigger__icon {
+  background-color: red;
+  animation: none; }
+
+.footer {
+  background-color: rgba(42, 44, 53, 0.9);
+  padding: 10px;
+  text-align: center;
+  font-size: 14px;
+  position: relative; }
+  .footer__text {
+    color: white;
+    font-weight: 100;
+    display: inline-block;
+    border-bottom: 1px solid #ddd;
+    padding-bottom: 10px; }
+  .footer .contacts__link {
+    color: white;
+    justify-content: center;
+    font-weight: 100; }
+    .footer .contacts__link:hover {
+      color: #4080ef; }
+  .footer__copy {
+    background-color: #2667d8;
+    margin: 0 -10px -10px;
+    padding: 10px;
+    color: white;
+    font-weight: 100; }
+
+.nav {
+  margin: auto; }
+  .nav__list {
+    padding: 0px; }
+  .nav__item {
+    list-style: none;
+    padding: 5px; }
+  .nav__link {
+    color: white;
+    text-decoration: none;
+    position: relative;
+    display: inline-block; }
+    .nav__link:after {
+      content: ' ';
+      display: block;
+      bottom: 0;
+      left: 0;
+      width: 100%;
+      height: 1px;
+      transform: rotateY(90deg);
+      transition: .2s;
+      transform-origin: 50%;
+      background-color: white; }
+    .nav__link:hover:after {
+      transform: rotateY(0deg); }
+
+.nav_footer .nav__list {
+  font-weight: normal;
+  display: flex;
+  justify-content: center; }
 
 .socials {
   font-size: 16px; }
@@ -557,26 +666,29 @@ body {
     .socials .icon:hover {
       color: #2d47ce; }
 
-.nav-trigger:hover .nav-trigger__icon {
-  background-color: #8080ff; }
-
-.nav-trigger__icon {
-  display: block;
-  width: 26px;
-  height: 3px;
-  border-radius: 3px;
-  background-color: #fff; }
-  .nav-trigger__icon:not(:first-child) {
-    margin-top: 7px; }
+.socials_footer {
+  border-bottom: 1px solid #ccc;
+  padding-bottom: 10px; }
+  .socials_footer .socials__list {
+    justify-content: center; }
+  .socials_footer .socials__link {
+    opacity: .6; }
+    .socials_footer .socials__link:hover {
+      opacity: 1; }
+      .socials_footer .socials__link:hover .icon {
+        color: white; }
 
 .title {
   font-size: 2.1875em;
   text-align: center; }
 
+.main-content {
+  position: relative;
+  z-index: 3; }
+
 .about-me {
   background-color: #f2f0e8;
-  padding: 10px 0 25px;
-  position: relative; }
+  padding: 10px 0 25px; }
   .about-me .title {
     margin-top: 0px; }
   .about-me__title {
@@ -641,14 +753,35 @@ body {
   .skills__item {
     display: inline-block; }
 
-.contacts__title {
-  position: relative; }
-  .contacts__title:after {
-    content: '';
-    position: absolute;
-    left: 50%;
-    transform: translateX(-50%);
-    width: 56px;
-    height: 3px;
-    background-color: #a1a3a9;
-    bottom: -10px; }
+.contacts {
+  background-color: white;
+  padding: 5px; }
+  .contacts__title {
+    position: relative; }
+    .contacts__title:after {
+      content: '';
+      position: absolute;
+      left: 50%;
+      transform: translateX(-50%);
+      width: 56px;
+      height: 3px;
+      background-color: #a1a3a9;
+      bottom: -10px; }
+  .contacts__list {
+    padding: 0 10px; }
+  .contacts__item {
+    list-style: none;
+    margin-top: 5px; }
+  .contacts__link {
+    color: #555;
+    text-decoration: none;
+    display: flex;
+    align-items: center; }
+    .contacts__link .icon {
+      color: blue;
+      margin-right: 5px;
+      font-size: 32px; }
+
+.map {
+  height: 90vh;
+  width: 100%; }
