--- a/app/_jade/templates/header.jade
+++ b/app/_jade/templates/header.jade
@@ -1,6 +1,7 @@
 include  ../common/mixins
 header.header
 	.header__fixed
+		canvas#header__Canvas
 		.header__top
 			.header__left
 				+socials('')
