--- a/app/_sass/sections/_header.scss
+++ b/app/_sass/sections/_header.scss
@@ -3,6 +3,7 @@
 	display: flex;
 	flex-direction: column;
 	align-items: center;
+	position: relative;
 
 	&__fixed{
 		position: fixed;
@@ -84,8 +85,8 @@
 		width: 100%;
 		min-height: 100vh;
 		display: flex;
-		z-index: 5;
-		background-color: blue;
+		z-index: 1000;
+		background-color: rgba(64,76,121,.9);
 		transition: 1s;
 	}
 	&__hidden_active{
@@ -136,5 +137,23 @@
 	&:hover .nav-trigger__icon{
 		background-color: red;
 		animation: none;
+	}
+}
+@media only screen and (min-width: 475px){
+	.header{
+		
+		&__title{
+			font-size: (35em/16);
+		}
+		&__subtext{
+			font-size: 1em;
+		}
+		&__center-img{
+			width: 190px;
+			height: 190px;
+		}
+		&__bottom{
+			margin-bottom: 50px;
+		}
 	}
 }
