--- a/app/css/main.css
+++ b/app/css/main.css
@@ -4,14 +4,6 @@
   height: 1em;
   fill: currentColor; }
 
-.icon-about_bg_left {
-  font-size: 101.3986rem;
-  width: 0.88759em; }
-
-.icon-about_bg_right {
-  font-size: 100.9986rem;
-  width: 0.89143em; }
-
 .icon-about_header {
   font-size: 17.544rem;
   width: 2.83949em; }
@@ -490,7 +482,8 @@ body {
   height: 100vh;
   display: flex;
   flex-direction: column;
-  align-items: center; }
+  align-items: center;
+  position: relative; }
   .header__fixed {
     position: fixed;
     display: flex;
@@ -556,8 +549,8 @@ body {
     width: 100%;
     min-height: 100vh;
     display: flex;
-    z-index: 5;
-    background-color: blue;
+    z-index: 1000;
+    background-color: rgba(64, 76, 121, 0.9);
     transition: 1s; }
   .header__hidden_active {
     right: 0px; }
@@ -593,8 +586,19 @@ body {
   background-color: red;
   animation: none; }
 
+@media only screen and (min-width: 475px) {
+  .header__title {
+    font-size: 2.1875em; }
+  .header__subtext {
+    font-size: 1em; }
+  .header__center-img {
+    width: 190px;
+    height: 190px; }
+  .header__bottom {
+    margin-bottom: 50px; } }
+
 .footer {
-  background-color: rgba(42, 44, 53, 0.9);
+  background-color: #2a2c35;
   padding: 10px;
   text-align: center;
   font-size: 14px;
@@ -603,7 +607,8 @@ body {
     color: white;
     font-weight: 100;
     display: inline-block;
-    border-bottom: 1px solid #ddd;
+    width: 99%;
+    border-bottom: 1px solid rgba(255, 255, 255, 0.6);
     padding-bottom: 10px; }
   .footer .contacts__link {
     color: white;
@@ -618,36 +623,102 @@ body {
     color: white;
     font-weight: 100; }
 
+@media only screen and (min-width: 475px) {
+  body {
+    position: relative; }
+  .footer {
+    background-color: rgba(42, 44, 53, 0.9);
+    position: absolute;
+    width: 100%;
+    left: 0;
+    bottom: 0px;
+    z-index: 100; }
+    .footer__contacts {
+      text-align: right; }
+    .footer .contacts__link {
+      display: inline; }
+    .footer__row {
+      display: flex;
+      align-items: top;
+      justify-content: space-between; }
+    .footer__copy {
+      opacity: .8; } }
+
 .nav {
   margin: auto; }
   .nav__list {
-    padding: 0px; }
+    padding: 0px;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center; }
   .nav__item {
     list-style: none;
-    padding: 5px; }
+    position: relative;
+    text-transform: uppercase; }
+    .nav__item:not(:first-child) {
+      margin-top: 40px; }
+    .nav__item:after, .nav__item:before {
+      content: ' ';
+      display: block;
+      position: absolute;
+      width: 3px;
+      height: 100%;
+      transform: rotateX(90deg);
+      transform-origin: 0 0;
+      transition: .2s;
+      background-color: white;
+      bottom: 0px;
+      transition-delay: .18s;
+      left: 0px; }
+    .nav__item:before {
+      right: 0px;
+      left: auto;
+      transform-origin: 100% 100%; }
+    .nav__item:hover:after {
+      transform: rotateY(0deg); }
+    .nav__item:hover:before {
+      transform: rotateY(0deg); }
   .nav__link {
     color: white;
     text-decoration: none;
     position: relative;
-    display: inline-block; }
-    .nav__link:after {
+    font-size: 2em;
+    display: inline-block;
+    padding: 10px; }
+    .nav__link:after, .nav__link:before {
       content: ' ';
       display: block;
-      bottom: 0;
-      left: 0;
+      position: absolute;
       width: 100%;
-      height: 1px;
+      height: 3px;
       transform: rotateY(90deg);
-      transition: .2s;
-      transform-origin: 50%;
-      background-color: white; }
+      transform-origin: 0;
+      transition: .18s;
+      background-color: white;
+      bottom: 0px;
+      left: 0px; }
+    .nav__link:before {
+      top: 0px;
+      transform-origin: 100% 100%; }
     .nav__link:hover:after {
+      transform: rotateY(0deg); }
+    .nav__link:hover:before {
       transform: rotateY(0deg); }
 
 .nav_footer .nav__list {
   font-weight: normal;
   display: flex;
-  justify-content: center; }
+  justify-content: center;
+  flex-direction: row; }
+
+.nav_footer .nav__item {
+  margin-top: 0px; }
+
+.nav_footer .nav__link {
+  font-size: 1em; }
+  .nav_footer .nav__link:after {
+    bottom: 0px; }
 
 .socials {
   font-size: 16px; }
@@ -678,6 +749,13 @@ body {
       .socials_footer .socials__link:hover .icon {
         color: white; }
 
+.socials_footer {
+  border-bottom: none; }
+  .socials_footer .socials__list {
+    border-bottom: none;
+    justify-content: flex-start;
+    padding-left: 10px; }
+
 .title {
   font-size: 2.1875em;
   text-align: center; }
@@ -704,8 +782,13 @@ body {
       background-color: #000;
       bottom: -10px; }
   .about-me__photo {
-    width: 100%; }
+    width: 100%;
+    max-width: 475px;
+    display: block;
+    margin: auto; }
   .about-me__text {
+    max-width: 495px;
+    margin: auto;
     padding: 10px;
     text-align: justify; }
   .about-me:before {
@@ -714,7 +797,7 @@ body {
     position: absolute;
     height: 180px;
     width: 100%;
-    top: -180px;
+    top: -179px;
     left: 0px;
     background-image: url(../pictures/bg.svg);
     background-size: 103%;
@@ -725,6 +808,10 @@ body {
   background-color: #f4f5f0;
   padding: 15px 10px 25px;
   text-align: justify; }
+  .skills p {
+    max-width: 475px;
+    margin: auto;
+    display: block; }
   .skills__title {
     position: relative;
     text-align: center; }
@@ -744,14 +831,17 @@ body {
     font-size: 1.3125em;
     margin: 15px; }
   .skills__type {
-    margin-top: 25px; }
+    margin-top: 25px;
+    list-style: none; }
   .skills__item-list {
     padding: 0px;
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-around; }
+    justify-content: center; }
   .skills__item {
-    display: inline-block; }
+    display: inline-block;
+    max-width: 475px;
+    margin: 0 10px; }
 
 .contacts {
   background-color: white;
@@ -781,7 +871,79 @@ body {
       color: blue;
       margin-right: 5px;
       font-size: 32px; }
+    .contacts__link:hover {
+      color: #333; }
+      .contacts__link:hover .icon {
+        color: #000099; }
 
 .map {
   height: 90vh;
   width: 100%; }
+
+@media only screen and (min-width: 475px) {
+  .contacts {
+    position: relative;
+    padding: 0px; }
+    .contacts__data {
+      position: absolute;
+      z-index: 100;
+      bottom: 45%;
+      left: 50%;
+      transform: translateX(-50%);
+      background-color: rgba(255, 255, 255, 0.9);
+      padding: 20px; } }
+
+@media only screen and (min-width: 900px) {
+  .about-me {
+    padding-top: 150px;
+    width: 50%;
+    background-color: transparent;
+    background-image: url("../pictures/about_bg_left.svg");
+    background-position: top;
+    background-size: cover; }
+    .about-me:before {
+      display: none; }
+  .skills {
+    padding-top: 150px;
+    width: 50%;
+    background-color: transparent;
+    background-image: url("../pictures/about_bg_right.svg");
+    background-position: top;
+    background-size: cover; }
+  .main-content {
+    margin-top: -150px;
+    display: flex;
+    flex-wrap: wrap; }
+  .contacts {
+    width: 100%; } }
+ 45%;
+      left: 50%;
+      transform: translateX(-50%);
+      background-color: rgba(255, 255, 255, 0.9);
+      padding: 20px; } }
+
+@media only screen and (min-width: 900px) {
+  .about-me {
+    padding-top: 150px;
+    width: 50%;
+    background-color: transparent;
+    background-image: url("../pictures/about_bg_left.svg");
+    background-position: top;
+    background-size: cover; }
+    .about-me:before {
+      display: none; }
+  .skills {
+    padding-top: 150px;
+    width: 50%;
+    background-color: transparent;
+    background-image: url("../pictures/about_bg_right.svg");
+    background-position: top;
+    background-size: cover; }
+  .main-content {
+    margin-top: -150px;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap; }
+  .contacts {
+    width: 100%; } }
