add typings into gitignore, add canvas

--- a/app/_jade/templates/header.jade
+++ b/app/_jade/templates/header.jade
@@ -1,7 +1,6 @@
 include  ../common/mixins
 header.header
 	.header__fixed
-		canvas#header__Canvas
 		.header__top
 			.header__left
 				+socials('')
@@ -12,6 +11,7 @@ header.header
 	.header__bottom
 		a(href="#" data-target="about").header__scroll-button.scroll-button
 			+icon('arrow_down','')
+	video(autoplay).header__bg-canvas#header__Canvas
 	.header__hidden
 		+nav('')
 		.header__right
