--- a/app/_sass/sections/_header.scss
+++ b/app/_sass/sections/_header.scss
@@ -49,8 +49,14 @@
 			width: 100%;
 			opacity: .1;
 		}
+	}
 
-
+	&__bg-canvas{
+		position: absolute;
+		top: 0px;
+		left: 0px;
+		width: 100%;
+		height: 100%;
 	}
 	&__center-img{
 		border-radius: 50%;
