--- a/app/css/main.css
+++ b/app/css/main.css
@@ -521,6 +521,12 @@ body {
       height: 100%;
       width: 100%;
       opacity: .1; }
+  .header__bg-canvas {
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    width: 100%;
+    height: 100%; }
   .header__center-img {
     border-radius: 50%;
     width: 145px;
@@ -913,37 +919,6 @@ body {
   .main-content {
     margin-top: -150px;
     display: flex;
-    flex-wrap: wrap; }
-  .contacts {
-    width: 100%; } }
- 45%;
-      left: 50%;
-      transform: translateX(-50%);
-      background-color: rgba(255, 255, 255, 0.9);
-      padding: 20px; } }
-
-@media only screen and (min-width: 900px) {
-  .about-me {
-    padding-top: 150px;
-    width: 50%;
-    background-color: transparent;
-    background-image: url("../pictures/about_bg_left.svg");
-    background-position: top;
-    background-size: cover; }
-    .about-me:before {
-      display: none; }
-  .skills {
-    padding-top: 150px;
-    width: 50%;
-    background-color: transparent;
-    background-image: url("../pictures/about_bg_right.svg");
-    background-position: top;
-    background-size: cover; }
-  .main-content {
-    margin-top: -150px;
-    display: -ms-flexbox;
-    display: flex;
-    -ms-flex-wrap: wrap;
     flex-wrap: wrap; }
   .contacts {
     width: 100%; } }
