--- a/app/_sass/sections/_header.scss
+++ b/app/_sass/sections/_header.scss
@@ -178,3 +178,28 @@
 		}
 	}
 }
+@media only screen and (min-width: 475px){
+	.nav-trigger__icon{
+		width: 40px;
+		height: 4px;
+		border-radius: 5px;
+
+		&:not(:first-child){
+			margin-top: 11px;
+		}
+	}
+	.nav-trigger_active{
+		.nav-trigger__icon{
+
+			&:nth-child(1){
+				transform: rotateZ(45deg) translateY(11px) translateX(11px);
+			}
+			&:nth-child(3){
+				transform: rotateZ(-45deg) translateY(-11px) translateX(9px);
+			}
+			&:nth-child(2){
+				opacity: 0;
+			}
+		}
+	}
+}
