--- a/app/_jade/templates/footer.jade
+++ b/app/_jade/templates/footer.jade
@@ -1,5 +1,5 @@
 footer.footer
-	span.footer__text Дизайн для этого сайта мне любезно предоставила Школа онлай образования LoftSchool.
+	span.footer__text Дизайн для этого сайта мне любезно предоставила Школа онлайн образования LoftSchool.
 	.footer__row
 		.footer__left
 			+nav('nav_footer')
