--- a/app/_sass/sections/_about__content.scss
+++ b/app/_sass/sections/_about__content.scss
@@ -61,7 +61,7 @@
 	background-color: #f4f5f0;
 	padding: 15px 10px 25px;
 	text-align: justify;
-	padding: 40px;
+
 
 	p{
 		max-width: 475px;
@@ -106,7 +106,11 @@
 	&__item{
 		display: inline-block;
 		max-width: 475px;
-		margin: 0 10px;
+		margin: 10px;
+
+		svg{
+			height: 110px;
+		}
 	}
 }
 .contacts{
@@ -222,11 +226,16 @@
 
 	}
 	.main-content{
-		margin-top: -150px;
+		margin-top: -160px;
 		display: flex;
 		flex-wrap: wrap;
 	}
 	.contacts{
 		width: 100%;
+	}
+}
+@media only screen and (min-width: 1200px){
+	.main-content{
+		margin-top: -185px;
 	}
 }
