--- a/app/_sass/sections/_footer.scss
+++ b/app/_sass/sections/_footer.scss
@@ -17,9 +17,11 @@
 		color: white;
 		justify-content: center;
 		font-weight: 100;
+		transition: 1s;
 
 		&:hover{
-			color: #4080ef;
+			color: white;
+			border-bottom: 1px solid white;
 		}
 	}
 	&__copy{
