--- a/app/_sass/main.scss
+++ b/app/_sass/main.scss
@@ -8,6 +8,6 @@
 @import "sections/footer";
 @import "sections/navigation";
 @import "sections/socials";
-
-//pages
 @import "sections/about__content";
+@import "sections/works";
+
