--- a/app/_sass/sections/_about__content.scss
+++ b/app/_sass/sections/_about__content.scss
@@ -59,7 +59,7 @@
 }
 .skills{
 	background-color: #f4f5f0;
-	padding: 15px 10px 25px;
+	padding: 15px 10px 125px;
 	text-align: justify;
 
 
@@ -80,7 +80,7 @@
 			transform: translateX(-50%);
 			width: 56px;
 			height: 3px;
-			background-color: #000;
+			background-color: #bbb;
 			bottom: -10px;
 		}
 	}
@@ -179,10 +179,14 @@
 			padding: 20px;
 		}
 	}
+	.map{
+		min-height: 700px;
+	}
 }
 @media only screen and (min-width: 900px){
 	.about-me{
 		padding-top: 150px;
+		padding-bottom: 125px;
 		width: 50%;
 		background-color: transparent;
 		background-image: url('../pictures/about_bg_left.svg');
@@ -237,5 +241,16 @@
 @media only screen and (min-width: 1200px){
 	.main-content{
 		margin-top: -185px;
+	}
+}
+@media only screen and (min-width: 1700px){
+	.main-content{
+		.about-me .title{
+			position: absolute;
+		}
+		.about-me__content{
+			margin-top: 60px;
+			margin-left: 350px;
+		}
 	}
 }
