--- a/app/_sass/sections/_socials.scss
+++ b/app/_sass/sections/_socials.scss
@@ -26,6 +26,8 @@
 .socials_footer{
 	border-bottom: 1px solid #ccc;
 	padding-bottom: 10px;
+	margin: 0 auto;
+	display: block;
 
 	.socials__list{
 		justify-content: center;
@@ -46,7 +48,13 @@
 	
 	.socials__list{
 		border-bottom: none;
-		justify-content: flex-start;
 		padding-left: 10px;
+	}
+}
+@media only screen and (min-width:720px){
+	.socials_footer{
+		.socials__list{
+			justify-content: flex-start;
+		}
 	}
 }
