--- a/app/_jade/templates/about__content.pug
+++ b/app/_jade/templates/about__content.pug
@@ -9,9 +9,8 @@ section.about-me
 			p В данный момент являюсь студентом Национального горного университета, обучаюсь по специальности "Программная инженерия и технологии", очно.
 section.skills
 	h2.skills__title ЧЕМ Я МОГУ БЫТЬ <br> ВАМ ПОЛЕЗЕН
-	p London is the capital of Great Britain
 	ul.skills__types-list
-		-var data = {"Frontend":{'HTML5':'75','CSS3':'100','<tspan dy="-10" dx="-5">JavaScript</tspan><tspan dy="15" dx="-50">& jQuery</tspan>':'80'},"Backend":{'PHP':'30','MySQL':'70'},"Workflow":{'Sass':'100','Jade':'100','Git':'50','Gulp':'60','NPM':'70'}}
+		-var data = {"Frontend":{'HTML5':'75','CSS3':'100','<tspan dy="-10" dx="-5">JavaScript</tspan><tspan dy="15" dx="-50">& jQuery</tspan>':'80','Angular 2': '70', 'Rx.js': '40', 'Canvas': '30', 'Redux.js': '60'},"Backend":{'PHP':'30','MySQL':'70'},"Workflow":{'Sass':'100','Jade':'100','Git':'50','Gulp':'60','NPM':'70'}}
 		each item,title in data
 			li.skills__type
 				h3.skills__type-title=title
