--- a/app/_jade/templates/footer.pug
+++ b/app/_jade/templates/footer.pug
@@ -8,7 +8,7 @@ footer.footer
 			ul.contacts__list
 				each val,index in contacts
 					li.contacts__item
-						a(href="#{val[1]}").contacts__link
+						a(href=val[1]).contacts__link
 							span= val[0]
 	.footer__copy
 		span &copy; Михаил Измайлов <br> Я старался, не копируйте мой сайт пожалуйста, сверстайте себе свой.
