--- a/app/_jade/templates/contacts.pug
+++ b/app/_jade/templates/contacts.pug
@@ -2,10 +2,10 @@ section.contacts
 	.contacts__data
 		h2.contacts__title.title КОНТАКТЫ
 		ul.contacts__list
-			-var contacts = {'skype_n':["m-izmaylov","callto:m-izmaylov"],'phone_n':["+38(063)7831249","callto:m-izmaylov"],'envelope_n':["m-izmaylov@inbox.ru","mailto:m-izmaylov@inbox.ru"],'map_n':["Днепр, просп Гагарина 57",""]}; //Незавание переменной не меняй!!! В футере тоже использую
+			-var contacts = {'skype_n':["m-izmaylov","callto:m-izmaylov"],'phone_n':["+38(063)7831249","callto:380637831249"],'envelope_n':["m-izmaylov@inbox.ru","mailto:m-izmaylov@inbox.ru"],'map_n':["Днепр, просп Гагарина 57",""]}; //Незавание переменной не меняй!!! В футере тоже использую
 			each val,index in contacts 
 				li.contacts__item
-					a(href="#{val[1]}").contacts__link
+					a(href=val[1]).contacts__link
 						+icon(index,'')
 						span= val[0]
 	.map#map
